--- a/public/i18n/ru.json
+++ b/public/i18n/ru.json
@@ -10,21 +10,49 @@
             "static2": "строим здания",
             "words": ["современные", "уникальные", "умные"]
         },
-        "title": "Мы разрабатываем и строим различные типы сооружений в Узбекистане. Удовлетворение потребностей и желаний наших клиентов всегда является нашим главным приоритетом."
+        "title": "Мы проектируем и строим различные типы конструкций в Узбекистане. Удовлетворение потребностей и желаний наших клиентов всегда наш главный приоритет."
     },
     "about": {
         "heading": "О нас",
         "subHeading": "Превращая мечты в реальность, JAVSTRUX строит с идеальным мастерством и инновационными решениями.",
-        "paragraph": "Мы не просто создаем проекты, мы создаем новые возможности. Строя строения нового поколения, мы формируем будущее. Мы берем на себя полную ответственность за экологические аспекты, связанные с постройкой и использованием зданий и инфраструктуры компании."
+        "paragraph": "Мы не просто создаем проекты, мы создаем новые возможности. Создавая современные строения, мы формируем будущее. Мы обязуемся полностью отвечать за экологические аспекты, связанные с строительством и использованием зданий и инфраструктуры компании.",
+        "statistics": {
+            "label": ["Сотрудники", "Проекты", "Опыт"]
+        }
     },
     "projects": {
         "heading": "Наши проекты",
-        "paragraph": "Путешествуйте с нами через 'JAVSTRUX' и открывайте для себя запоминающиеся архитектурные чудеса. От величественных небоскребов до индивидуальных жилых зданий, мы продемонстрируем наше стремление к совершенству, инновациям и удовлетворению потребностей наших клиентов. Присоединяйтесь к нам, вместе мы создаем будущее!",
-        "title1": "Этот проект имеет большое социальное значение. Культурно-отдыховый кластер в Ташкенте является одним из привлекательных мест.",
-        "title2": "Многофункциональный жилой комплекс, созданный для обеспечения удобства жителей Узбекистана.",
+        "paragraph": "Путешествуйте с нами по 'JAVSTRUX' и открывайте для себя запоминающиеся архитектурные чудеса. От величественных небоскребов до индивидуальных жилых зданий, мы демонстрируем наше стремление к совершенству, инновациям и удовлетворению потребностей наших клиентов. Присоединяйтесь к нам, вместе мы создаем будущее!",
+        "title1": "Этот проект имеет широкое социальное значение. Культурно-развлекательный кластер в Ташкенте - одно из привлекательных мест.",
+        "title2": "Многофункциональный жилой комплекс, созданный для обеспечения удобства населения Узбекистана.",
         "title3": "\"Великолепный жилой комплекс в столице.\"",
-        "title4": "\"Fonon - Большой завод по производству ювелирных изделий из драгоценных металлов на базе итальянских фабрик в Узбекистане в 2020 году. Fonon - Крупное предприятие по производству ювелирных изделий из драгоценных металлов в Центральной Азии с использованием европейских и восточных методов.\"",
-        "title5": "\"Международный детский сад и школа, расположенные в международном деловом центре Tashkent City.\"",
+        "title4": "\"Fonon - Крупный завод по производству ювелирных изделий из драгоценных металлов на основе итальянских заводов в Узбекистане в 2020 году. Fonon - Крупное предприятие по производству ювелирных изделий из драгоценных металлов в Центральной Азии с использованием европейских и восточных методов.\"",
+        "title5": "\"Международный детский сад и школа, расположенные в международном бизнес-центре Ташкент-Сити.\"",
         "title6": "\"Это международно аккредитованное учебное заведение.\""
-    }
+    },
+    "news": {
+        "heading": "Новости",
+        "title1": "Dwell: Выселенные из аренды, эта пара из Лос-Анджелеса купила, а затем построила лучший ADU, который только могла",
+        "title2": "Enes Yilmazer: Этот МАЛЕНЬКИЙ ДОМ - Будущее жилья!",
+        "title3": "Почему вам нужен суперкомпьютер, чтобы построить дом",
+        "title4": "Кирстен Дирксен: Бабушка чувствовала себя одинокой. Ее новый домик на заднем дворе заставил ее родственников стучать",
+        "date1": "вт фев 13 2024",
+        "date2": "ПН ДЕК 25 2023",
+        "date3": "сб дек 08 2018",
+        "date4": "ВС СЕН 3 2023"
+    },
+    "contact": {
+        "form":{
+            "heading": "Оставьте свои мысли и наблюдения.",
+            "name": "Ваше имя",
+            "nameError": "Имя должно содержать менее 4 символов!",
+            "phone": "Ваш номер телефона",
+            "phoneError": "Неверный номер телефона!",
+            "message": "Оставьте свое сообщение...",
+            "messageError": "Сообщение не может быть пустым!",
+            "send": "Отправить"
+        }
+    },
+    "btn": "Подробнее"
+
 }
