--- a/public/i18n/uz.json
+++ b/public/i18n/uz.json
@@ -22,12 +22,34 @@
     },
     "projects": {
         "heading": "Bizning loyihalar",
-        "paragraph": "“JAVSTRUX bilan meʼmoriy moʻjizlarga sayohat qiling. Bizning turli xildagi  ajoyib osmono'par binolardan tortib to buyurtma uylarigacha mukammallik, innovatsiyalar va mijozlar ehtiyojini qondirishga sodiqligimizni namoyish etadi.  Bizga qo'shiling, birgalikda kelajak yaratamiz!",
-        "title1": "Bu keng ko'lamli ijtimoiy ahamiyatga ega loyiha. Toshkentdagi madaniy-ko'ngilochar klaster yangi diqqatga sazovor joylardan biridir.",
-        "title2": "O'zbekiston aholisiga qulaylik yaratish maqsadida yaratilgan ko'p funksiyali turar-joy majmuasi.",
-        "title3": "\"Poytaxt markazidagi muhtasham turar-joy massivi.\"",
-        "title4": "\"Fonon - O'zbekistonda 2020 yilda italyan zavodlari negizida qurilgan zargarlik buyumlari ishlab chiqarish zavodi. Fonon - Markaziy Osiyoda Yevropa va Sharq uslubida qimmatbaho metallardan zargarlik buyumlari ishlab chiqaradigan yagona yirik korxona.\"",
-        "title5": "\"Tashkent City xalqaro biznes markazida joylashgan xalqaro bolalar bog'chasi va maktabi.\"",
-        "title6": "\"Bu xalqaro darajada bilim beradigan ta'lim muassasasi.\""
-    }
+        "paragraph": "“JAVSTRUX bilan meʼmoriy moʻjizlarga sayohat qiling. Bizning turli xildagi  ajoyib osmono'par binolardan tortib to buyurtma uylarigacha mukammallik, innovatsiyalar va mijozlar ehtiyojini qondirishga sodiqligimizni namoyish etadi.  Bizga qo'shiling, birgalikda kelajak yaratamiz!"
+    },
+    "news": {
+        "heading": "Yangiliklar",
+        "title1": "Xonadon: Arzon ijaraga uchun qurildi, bu Los-Anjelisdan joy olindi va so'ngra eng yaxshi ADUlarini qurishdi",
+        "date1": "sesh fev 13 2024",
+        "title2": "Enes Yilmazer: Ushbu KICHIK UY  uylarning kelajagi!",
+        "date2": "Dushanba dek 25 2023",
+        "title3": "Uy qurish uchun superkompyuterdan  foydalanish",
+        "date3": "shan dec 08 2018",
+        "title4": "Kirsten Dirksen: Granny buni his qilgan. Uning yangi orqadagi uyida qarindoshlari...",
+        "date4": "Yakshanba sent 3 2023"
+    },
+    "contact": {
+        "form":{
+            "heading": "Fikr va mulohazlaringizni qoldiring.",
+            "name": "Ismingiz",
+            "nameError": "Ism 4 ta belgidan kam bo'lamsligi kerak!",
+            "phone": "Telefon raqamingiz",
+            "phoneError": "Telefon raqami noto'g'ri!",
+            "message": "Xabaringizni qoldiring...",
+            "messageError": "Xabar bo'sh bo'lishi mumkin emas!",
+            "send": "Yuborish"
+        }
+    },
+    "btn": "Batafsil"
+
 }
+
+
+
